git@github.com:fhxx/gulp-dome.git

--- a/html/css.html
+++ b/html/css.html
@@ -15,6 +15,6 @@
     file: <a href="../dist/css/css-display-flex.css">../dist/css/css-display-flex.css</a>
     <br>
 <hr>
-<div class="demo">.demo</div>
+<div class="demo">.demo1234</div>
 </body>
 </html>
